<resources>
    <string name="app_name"> </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tab"> </string>
    <string name="tab_text_1">Video</string>
    <string name="tab_text_2">PDF</string>
    <string name="tab_text_3">ELSE</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="full_screen">full screen mode</string>
    <string name="title_activity_grade">GradeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="g1_button">GRADE1</string>
    <string name="g2_button">GRADE2</string>
    <string name="g3_button">GRADE3</string>
    <string name="g4_button">GRADE4</string>
    <string name="g5_button">GRADE5</string>



</resources>
